syntax = "proto3";

package task;

option go_package = "/pb";

import "google/protobuf/timestamp.proto";

message Task {
  uint64 id = 1;
  string title = 2;
  string note = 3;
  int32 completed = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
  uint64 category_id = 7;
  google.protobuf.Timestamp due_date = 8;
}

message NewTask {
  string title = 1;
  string note = 2;
  uint64 category_id = 3;
  google.protobuf.Timestamp due_date = 4;
}

message UpdateTask {
  uint64 id = 1;
  optional string title = 2;
  optional string note = 3;
  optional int32 completed = 4;
  optional uint64 category_id = 5;
  optional google.protobuf.Timestamp due_date = 6;
}

message TaskList {
  repeated Task tasks = 1;
}

message TaskId {
  uint64 id = 1;
}

message GetTasksRequest {
  optional uint64 category_id = 1;
  optional google.protobuf.Timestamp due_date_start = 2;
  optional google.protobuf.Timestamp due_date_end = 3;
}

message CreateTaskRequest {
  NewTask input = 1;
}

message UpdateTaskRequest {
  UpdateTask input = 1;
}

message DeleteTaskResponse {
  bool success = 1;
}

service TaskService {
  rpc GetTasks (GetTasksRequest) returns (TaskList);
  rpc CreateTask (CreateTaskRequest) returns (Task);
  rpc UpdateTask (UpdateTaskRequest) returns (Task);
  rpc DeleteTask (TaskId) returns (DeleteTaskResponse);
}
